Create header, footer template include templates in home.ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,13 +1,13 @@
-<h1>Home</h1>
+<%- include('header'); -%>
+  <p>
+    <%= homeContent %>
+  </p>
 
-<p>
-  <%= homeContent %>
-</p>
+  <p>
+    <%= aboutContent %>
+  </p>
 
-<p>
-  <%= aboutContent %>
-</p>
-
-<p>
-  <%= contactContent %>
-</p>
+  <p>
+    <%= contactContent %>
+  </p>
+  <%- include('footer'); -%>
