Create partial folder, move partials header, footer into it.  Update partials file-path

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,13 +1,5 @@
-<%- include('header'); -%>
+<%- include('partials/header'); -%>
   <p>
     <%= homeContent %>
   </p>
-
-  <p>
-    <%= aboutContent %>
-  </p>
-
-  <p>
-    <%= contactContent %>
-  </p>
-  <%- include('footer'); -%>
+  <%- include('partials/footer'); -%>
