--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,11 +1,9 @@
 </div>
 <!-- Footer -->
 <footer class="bg-light py-3">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 text-md-center">
-        <p>&copy; 2023 Blog</p>
-      </div>
+  <div class="container-fluid">
+    <div class="col-md-6 text-md-right">
+      <p>&copy; 2023 Blog</p>
     </div>
   </div>
 </footer>
