--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,7 +22,7 @@
       <%= post.title %>
     </h5>
     <p>
-      Post: <%= post.message %>
+      Post: <%= (post.message).substring(0, 100) %> <a href="/posts/<%= post.title%>">...read more</a>
     </p>
     <% }); %>
       <%- include('partials/footer'); -%>
