--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 </div>
 <!-- Footer -->
-<footer class="bg-light py-3">
+<footer class="footer bg-light py-3">
   <div class="container-fluid">
     <div class="col-md-6 text-md-right">
       <p>&copy; 2023 Blog</p>
@@ -12,6 +12,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+<script src="/app.js"></script>
 </body>
 
 </html>
