--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,7 +36,7 @@
           <a class="nav-link" href="/about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact">Contact</a>
+          <a class="nav-link" href="/compose">Compose</a>
         </li>
       </ul>
     </div>
